--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.1.0"
+    "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
+    "react-router": "^7.1.0",
+    "recharts": "^2.15.0",
+    "redux-persist": "^6.0.0",
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
